Fixed overflow and modal edges

--- a/styles.css
+++ b/styles.css
@@ -23,18 +23,18 @@ body {
     rotate: -45deg;
     transform: skewX(-45deg);
     z-index: -1;
+        width: 350px;
 }
 
 #stripe1 {
     top: 0;
     height: 70px;
-    width: 600px;
+
 }
 
 #stripe2 {
     top: 110px;
     height: 15px;
-    width: 600px;
 }
 
 
@@ -76,18 +76,16 @@ h1 {
 }
 
 #modal {
-    background: rgba(30, 30, 30, 0.5);
+    background: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
-    width: 100%;
-    max-width: 90vw;
-    height: 98vh;
+    width: 100vw;
+    height: 100vh;
     position: absolute;
     top: 0;
     border-radius: 6px;
-    border: 1px solid #888;
     z-index: 1;
 }
 
